--- a/index.html
+++ b/index.html
@@ -31,35 +31,37 @@
 <li>
     <br>
     "Если нет выгоды, не двигайся; если не можешь приобрести, не пускай в ход войска; если нет опасности, не воюй. Государь не должен поднимать оружие из-за своего гнева; полководец не должен вступать в бой из-за своей злобы. Двигаются тогда, когда это соответствует выгоде; если это не соответствует выгоде, остаются на месте."
-    <table class="table">
-        <tr>
-        <th>1</th>
-        <th>2</th>
-        <th>3</th>
-        </tr>
-        <tr>
-        <th>1</th>
-        <th>2</th>
-        <th>3</th>
-        </tr>
-        <tr>
-        <th> 1</th>
-        <th> 2</th>
-        <th> 3</th>
-        </tr>
-        <tr>
-        <th> 1</th>
-        <th> 2</th>
-        <th> 3</th>
-        </tr>
-        <tr>
-        <th> 1</th>
-        <th> 2</th>
-        <th> 3</th>
-        </tr>
-        <tr>
-        </tr>
-        </table>
+    <table id = "table">
+<tr class = "tab0">
+<th>Колонка 1</th>
+<th>Колонка 2</th>
+<th>Колонка 3</th>
+</tr>
+<tbody>
+<tr class =
+    <td colspan = "3">Объединённая ячейка 1, 2, 3</td>
+    </tr>
+    <tr class = "tab2">
+    <td>Ячейка 4</td>
+    <td>Ячейка 5</td>
+    <td>Ячейка 6</td>
+    </tr>
+    <tr class = "tab1">
+    <td>Ячейка 7</td>
+    <td>Ячейка 8</td>
+    <td>Ячейка 9</td>
+    </tr>
+    <tr class = "tab2">
+    <td colspan = "3">Объединённая ячейка 10, 11, 12</td>
+    </tr>
+    <tr class = "tab1">
+    <td>Ячейка 13</td>
+    <td>Ячейка 14</td>
+    <td>Ячейка 15</td>
+    </tr>
+    </tbody>
+    </table>
+    <br>
     <p>нижний список ссылок имеет:</p>
     <a href="http://example.com"title ="example.com">1)абсолютную гиперссылку на главную страницу сайта example.com</a> <br>
     <a href="https://example.com"title="example.com">2)абсолютную гиперссылку на главную сайта example.com в протоколе https</a> <br>
